# SentinelReview

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SentinelReview_MVP.ipynb  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/components/app-header/: AppHeader.tsx
frontend/src/components/pull-request-input/: PullRequestInput.tsx
frontend/src/components/pull-request-reviewer/: PullRequestReviewer.tsx
src/agents/: CorrectnessAgent.py  PRReviewer.py  SecurityAgent.py  SummarizerAgent.py  TriageAgent.py  constants.py  models.py
src/api/: main.py  models.py
src/dev-notebooks/: Fetch_github_notebook.ipynb
src/github_fetcher/: github_api_connector.py  models.py
src/mcp-server/: mcp_server.py
