[project]
name = "sentinelreview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "langchain>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.14.10"
]
